# himpi-sys

./: Cargo.toml  README.md  Xargo.toml  arm-hisiv100-linux-uclibcgnueabi.json  build.rs
.cargo/: hi3531v100-static.toml  hi3531v100.toml  hi3559av100-static.toml  hi3559av100.toml
src/: lib.rs
