[package]
name = "himpi-sys"
version = "0.1.1"
authors = ["Varphone Wong <varphone@qq.com>"]
homepage = "https://github.com/varphone/himpi-sys"
documentation = "https://docs.rs/himpi-sys"
description = """
Hi35XX MPI APIs for Rust unsafe bindings.
"""
categories = ["embedded", "external-ffi-bindings"]
readme = "README.md"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-bitfield = "0.1.1"
cfg-if = "0.1"

[build-dependencies]
bindgen = "0.51.1"
regex = "1.3"

[patch.crates-io]
bindgen = { git = "https://github.com/varphone/rust-bindgen.git", rev = "v0.51.1-sp1" }

[features]
default = [
    "hi3559av100",
    "mpi-hdmi",
    "mpi-sys",
    "mpi-vb",
    "mpi-vdec",
    "mpi-venc",
    "mpi-vi",
    "mpi-vo",
    "mpi-vpss"
]
static-link = []
hi3516ev200 = []
hi3516ev300 = []
hi3518ev200 = []
hi3518ev300 = []
hi3519av100 = []
hi3531v100 = []
hi3559av100 = []
mpi-ae = []
mpi-audio = []
mpi-avs = []
mpi-awb = []
mpi-dpu = []
mpi-dsp = []
mpi-gdc = []
mpi-hdmi = []
mpi-hdr = []
mpi-isp = []
mpi-ive = []
mpi-nnie = []
mpi-pciv = []
mpi-photo = []
mpi-region = []
mpi-snap = []
mpi-sys = []
mpi-vb = []
mpi-vdec = []
mpi-venc = []
mpi-vgs = []
mpi-vi = []
mpi-vo = []
mpi-vpss = []

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = "abort"
