[package]
name = "himpi-sys"
version = "0.1.4"
authors = ["Varphone Wong <varphone@qq.com>"]
edition = "2018"

# Metadata for Publish
description = """
Hi35XX MPI API for Rust unsafe bindings.
"""
documentation = "https://docs.rs/himpi-sys"
homepage = "https://github.com/varphone/himpi-sys"
readme = "README.md"
categories = ["embedded", "external-ffi-bindings"]
license = "MIT"

[dependencies]
rust-bitfield = "0.1.1"
cfg-if = "0.1"

[build-dependencies]
bindgen = "0.52.0"
regex = "1.3"

[patch.crates-io]
bindgen = { git = "https://github.com/varphone/rust-bindgen.git", rev = "v0.52.0-sp1" }

[features]
default = [
    "hi3559av100",
    "mpi-hdmi",
    "mpi-sys",
    "mpi-vb",
    "mpi-vdec",
    "mpi-venc",
    "mpi-vi",
    "mpi-vo",
    "mpi-vpss"
]
static-link = []
hi3516ev200 = []
hi3516ev300 = []
hi3518ev200 = []
hi3518ev300 = []
hi3519av100 = []
hi3531v100 = [ "static-link" ]
hi3559av100 = []
mpi-ae = []
mpi-audio = []
mpi-avs = []
mpi-awb = []
mpi-dpu = []
mpi-dsp = []
mpi-gdc = []
mpi-hdmi = []
mpi-hdr = []
mpi-isp = []
mpi-ive = []
mpi-nnie = []
mpi-pciv = []
mpi-photo = []
mpi-region = []
mpi-snap = []
mpi-sys = []
mpi-vb = []
mpi-vdec = []
mpi-venc = []
mpi-vgs = []
mpi-vi = []
mpi-vo = []
mpi-vpss = []

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = "abort"
