[package]
name = "himpi-sys"
version = "0.1.12"
authors = ["Varphone Wong <varphone@qq.com>"]
edition = "2018"

# Metadata for Publish
description = """
Hi35XX MPI API for Rust unsafe bindings.
"""
documentation = "https://docs.rs/himpi-sys"
homepage = "https://github.com/varphone/himpi-sys"
readme = "README.md"
categories = ["embedded", "external-ffi-bindings"]
license = "MIT"

[dependencies]
cfg-if = "0.1"
pavo-traits = "0.1"
rust-bitfield = "0.1"

[build-dependencies]
bindgen = "0.54.1"
regex = "1.3"

[patch.crates-io]
bindgen = { git = "https://github.com/varphone/rust-bindgen.git", rev = "v0.54.1-sp1" }

[features]
default = []
static-link = []
hi3516ev200 = [
    "static-link",
    "mpi-audio",
    "mpi-isp",
    "mpi-ive",
    "mpi-region",
    "mpi-sys",
    "mpi-vb",
    "mpi-venc",
    "mpi-vi",
    "mpi-vo",
    "mpi-vpss"
]
hi3516ev300 = []
hi3518ev200 = []
hi3518ev300 = []
hi3519av100 = []
hi3531v100 = [
    "static-link",
    "mpi-audio",
    "mpi-hdmi",
    "mpi-ive",
    "mpi-sys",
    "mpi-vb",
    "mpi-vdec",
    "mpi-venc",
    "mpi-vi",
    "mpi-vo",
    "mpi-vpss"
]
hi3559av100 = [
    "mpi-audio",
    "mpi-avs",
    "mpi-dsp",
    "mpi-gdc",
    "mpi-hdmi",
    "mpi-isp",
    "mpi-ive",
    "mpi-nnie",
    "mpi-sys",
    "mpi-vb",
    "mpi-vdec",
    "mpi-venc",
    "mpi-vi",
    "mpi-vo",
    "mpi-vpss"
]
mpi-ae = []
mpi-audio = []
mpi-avs = []
mpi-awb = []
mpi-dpu = []
mpi-dsp = []
mpi-gdc = []
mpi-hdmi = []
mpi-hdr = []
mpi-isp = [ "mpi-ae", "mpi-video" ]
mpi-ive = []
mpi-nnie = []
mpi-pciv = []
mpi-photo = []
mpi-region = []
mpi-snap = []
mpi-sys = []
mpi-vb = []
mpi-vdec = [ "mpi-video" ]
mpi-venc = [ "mpi-video" ]
mpi-vgs = []
mpi-vi = [ "mpi-video" ]
mpi-video = []
mpi-vo = [ "mpi-video" ]
mpi-vpss = [ "mpi-video" ]

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = "abort"
